# ScrapingScrapy

./: README.md  pyproject.toml  requerements.txt
coleta/coleta/: settings.py
coleta/coleta/spiders/: mercadolivre.py
data/: data.json  data_out.csv  quotes.db
src/coleta/: settings.py
src/coleta/spiders/: mercadolivre.py
src/dash/: app.py
src/transform/: main.py
